Add warnings to user about problems with filesystem destination

BUG: 445391
BUG: 458327